[gd_scene load_steps=8 format=3 uid="uid://bk3qj8l2xp5yw"]

[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="1_camera"]
[ext_resource type="PackedScene" uid="uid://c6yqh4x8m2npv" path="res://scenes/player/character_model.tscn" id="2_character"]
[ext_resource type="Script" path="res://scripts/click_movement_controller.gd" id="3_click_movement"]
[ext_resource type="Script" path="res://scripts/combat_controller.gd" id="4_combat"]
[ext_resource type="Script" path="res://scripts/death_controller.gd" id="5_death"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.35
height = 1.83

[sub_resource type="SphereShape3D" id="SphereShape3D_spring"]
radius = 0.2

[node name="Player" type="Player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.915, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="CharacterModel" parent="." instance=ExtResource("2_character")]

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("1_camera")
target = NodePath("..")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0)
shape = SubResource("SphereShape3D_spring")
spring_length = 7.0

[node name="Camera3D" type="Camera3D" parent="CameraController/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="ClickMovementController" type="Node" parent="."]
script = ExtResource("3_click_movement")

[node name="CombatController" type="Node" parent="."]
script = ExtResource("4_combat")

[node name="DeathController" type="Node" parent="."]
script = ExtResource("5_death")
